Aggiunta simulazione orizzonte infinito sia simple che ride sharing